# cs-intro-exam-environment

./: CMakeLists.txt  LICENSE  compile.sh  main.c  readme.md  student_tests.json
.github/workflows/: main.yml
cjson/: cJSON.c  cJSON.h
test/: student_test.c
